crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__dict__missing_closing_brace_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/dict/missing_closing_brace_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..24,
        body: [
            Expr(
                StmtExpr {
                    range: 0..24,
                    value: Dict(
                        ExprDict {
                            range: 0..24,
                            items: [
                                DictItem {
                                    key: Some(
                                        Name(
                                            ExprName {
                                                range: 1..2,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        ExprName {
                                            range: 5..8,
                                            id: Name("def"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        Call(
                                            ExprCall {
                                                range: 9..14,
                                                func: Name(
                                                    ExprName {
                                                        range: 9..12,
                                                        id: Name("foo"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                arguments: Arguments {
                                                    range: 12..14,
                                                    args: [],
                                                    keywords: [],
                                                },
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        ExprName {
                                            range: 20..24,
                                            id: Name("pass"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

error: Invalid syntax
  |
1 | {x:
2 | 
3 | def foo():
  | ^^^ Expected an identifier, but found a keyword 'def' that cannot be used here
4 |     pass
  |


error: Invalid syntax
  |
1 | {x:
2 | 
3 | def foo():
  |     ^^^ Expected ',', found name
4 |     pass
  |


error: Invalid syntax
  |
3 | def foo():
4 |     pass
  |     ^^^^ Expected an identifier, but found a keyword 'pass' that cannot be used here
  |


error: Invalid syntax
  |
3 | def foo():
4 |     pass
  |         ^ unexpected EOF while parsing
  |
